--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "sideco-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://sideco.com.co",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -18,6 +19,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build && echo sideco.com.co > ./build/CNAME",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
