--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "sideco-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://sideco.com.co",
+  "homepage": "https://hamiltoncode.github.io/sideco-app/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -43,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^5.0.0"
   }
 }
